[package]
name = "gossipsub-blocks"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

[[bin]]
name = "pub"
path = "src/pub/main.rs"

[[bin]]
name = "sub"
path = "src/sub/main.rs"

[lib]
name = "common"
path = "src/common/mod.rs"

[package.metadata.release]
release = false

[dependencies]
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"
futures = "0.3.30"
libp2p = { version = "0.53", features = [
    "tokio",
    "gossipsub",
    "mdns",
    "noise",
    "macros",
    "tcp",
    "yamux",
    "quic",
] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
web3 = "0.19.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
